--- a/templates/logout_button.html
+++ b/templates/logout_button.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
 <form action="logout" method="get">
-    <input type="image" src={% static 'general/logout_1.png' %} width="140px" height="70px" alt="Logout" id="logout"
+    <input type="image" src={% static 'general/logout_profile.png' %} width="140px" height="70px" alt="Logout" id="logout"
            name="logout">
 </form>
