--- a/templates/parent_nav.html
+++ b/templates/parent_nav.html
@@ -1,5 +1,6 @@
 <div id="nav_bar">
     <ul>
+        <li><a href="{% url 'parent' %}">Panel</a></li>
         <li><a href="{% url 'signup' %}" id ='signUp'>Register Child</a></li>
         <li><a href="{% url 'logout' %}" id = 'log'>Log out</a></li>
         <!--<li><a href="SignUp.html">Sign Up</a></li> -->
