--- a/static/bank_guide/guide-CSS.css
+++ b/static/bank_guide/guide-CSS.css
@@ -130,24 +130,11 @@ body {
     margin-right: 200px;
 }
 
+
+
 /**---------------------------------------------------------------------*/
 
 /**---------------------------------------------------------------------*/
-#footer {
-    background-color: #D0CECE;
-    height: 80px;
-    width: 1055px;
-    font-family: Century Gothic;
-    color: #0B8C52;
-    font-size: 25px;
-    text-align: center;
-    padding-top: 40px;
-    margin: 0% auto;
-}
-
-#footer p {
-    width: 200px;
-    margin: auto;
-}
+#footer {width:1055px;}
 
 /**---------------------------------------------------------------------*/
