--- a/static/parent_account.css
+++ b/static/parent_account.css
@@ -70,23 +70,23 @@ body {
 #nav_bar li:hover {
     background-color: #0B8C52;
 }
+.entry{
+    display:inline-block;
+    background-color:#000000;
+    height:inherit;
+}
 
 /**---------------------------------------------------------------------*/
 
 /**---------------------------------------------------------------------*/
-#management_panel,  .atms_panel {
+#management_panel,  #atms_panel, #goal_panel  {
     width: 1450px;
     height: 400px;
     margin: 100px auto;
     color: #0B8C52;
     /*border: 1px solid black;*/
 }
-.goal_panel {
-    width: 1450px;
-    height: 600px;
-    margin: 100px auto;
-    color: #0B8C52;
-}
+
 
 .title {
     font-family: Century Gothic;
@@ -129,6 +129,7 @@ body {
 #set_goals{
      width: 1450px;
     height: 350px;
+    margin-bottom:0px;
     background-color: #FFFFFF;
     border: 5px solid #0B8C52;
 }
@@ -311,23 +312,21 @@ form#set_goals p {
 /**---------------------------------------------------------------------*/
 
 /**---------------------------------------------------------------------*/
-form#choose_atms p {
+#choose_atms p {
     font-family: Century Gothic;
     font-size: 25px;
-    margin: 70px 55px;
+    margin: 30px 55px;
     float: left;
 }
 
-form#choose_atms p.prompt {
+#choose_atms p.prompt {
     font-weight: bold;
     position: relative;
-    top: 80px;
+    top: 0px;
 }
 
 input.select_atms {
     background-color: #0B8C52;
-    height: 40px;
-    width: 350px;
     font-family: Century Gothic;
     font-size: 25px;
     font-style: italic;
@@ -342,21 +341,21 @@ input.select_atms {
 /**---------------------------------------------------------------------*/
 #footer {
     background-color: #D0CECE;
-    margin: 10px auto;
-    height: 30px;
-    font-size: 90%;
-}
-
-#footer ul {
-    text-align: right;
-}
-
-#footer ul li {
-    display: inline;
+    height: 80px;
+    width: 101%;
+    margin-top: 150px;
+    margin-left: -8px;
+    margin-bottom: -8px;
     font-family: Century Gothic;
-    font-size: 20px;
-    color: #395835;
-    margin: 10px;
+    color: #0B8C52;
+    font-size: 25px;
+    text-align: center;
+    padding-top: 40px;
+}
+
+#footer p {
+    width: 300px;
+    margin: auto;
 }
 
 /**---------------------------------------------------------------------*/
