--- a/templates/ATMs.html
+++ b/templates/ATMs.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 {% load staticfiles %}
+<!--Author: Michal-->
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <link rel="stylesheet" type="text/css" href={% static 'footer.css' %}/>
@@ -15,7 +17,7 @@
     <script
 	src="http://maps.googleapis.com/maps/api/js">
 	</script>
-
+<!--Initialises points on map-->
 <script>
  var geocoder;
   var map;
@@ -27,7 +29,8 @@ function initialise(){
   center:latlng
   }
    map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
+} 
+	//If location taken from server, shows on map and displays name and marker
 	function codeAddress() {
   	var address = document.getElementById('address').value;
   	geocoder.geocode( { 'address': address}, function(results, status) {
@@ -43,6 +46,7 @@ function initialise(){
     }
   });
   }
+  //If location taken from server, shows on map and displays name and marker
   function codeAddress2() {
   	var address = document.getElementById('address2').value;
   	geocoder.geocode( { 'address': address}, function(results, status) {
@@ -59,6 +63,7 @@ function initialise(){
     }
   });
   }
+  //If location taken from server, shows on map and displays name and marker
     function codeAddress3() {
   	var address = document.getElementById('address3').value;
   	geocoder.geocode( { 'address': address}, function(results, status) {
@@ -74,6 +79,7 @@ function initialise(){
     }
   });
   }
+  //If location taken from server, shows on map and displays name and marker
     function codeAddress4() {
   	var address = document.getElementById('address4').value;
   	geocoder.geocode( { 'address': address}, function(results, status) {
@@ -89,6 +95,7 @@ function initialise(){
     }
   });
   }
+  //If location taken from server, shows on map and displays name and marker
     function codeAddress5() {
   	var address = document.getElementById('address5').value;
   	geocoder.geocode( { 'address': address}, function(results, status) {
@@ -107,6 +114,8 @@ function initialise(){
 </script>
 </head>
 
+<!--Runs methods on load-->
+
 <body onLoad="initialise(); codeAddress(); codeAddress2(); codeAddress3(); codeAddress4(); codeAddress5()">
 {% include 'nav_bar.html' %}
 
@@ -120,7 +129,7 @@ function initialise(){
 	<div id="prompt">
 		<p>You can withdraw the money at...</p>
 	</div> 
-	
+	<!--Provides buttons to zoom on given location, not displayed if request failed-->
 	<ul id="atm_list">	
         <div style="display:none" id="location1"<li><p>{{ atms.1.location }} <input type="button" value="Go!" onClick="codeAddress()" style="float:right;"></p></li></div>
         <div style="display:none" id="location2"<li><p>{{ atms.2.location }} <input type="button" value="Go!" onClick="codeAddress2()" style="float:right;"></p></li></div>
@@ -129,6 +138,8 @@ function initialise(){
         <div style="display:none" id="location5"<li><p>{{ atms.5.location }} <input type="button" value="Go!" onClick="codeAddress5()" style="float:right;"></p></li></div>
   	</ul> 
 	<hr/>
+	<!--Requests locations from server -->
+
 	 <div style="visibility:hidden;">
           <input id="address" type="textbox" value="{{ atms.1.location }}">
           <input id="address2" type="textbox" value="{{ atms.2.location }}">
@@ -139,9 +150,12 @@ function initialise(){
    
 
         </div>
+        <!--Imports map-->
+
 	<div id="location"> 
     <div id="googleMap" style="width:1055px;height:380px;"></div>
 </div>
+<!--Provides footer-->
 </div>
 		{% include 'footer.html' %}
 
