--- a/templates/Guide.html
+++ b/templates/Guide.html
@@ -2,6 +2,7 @@
 <html>
 {% load staticfiles %}
 <head>
+     <!--Author: Michal-->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 
@@ -18,7 +19,7 @@
     </style>
     <script type="text/javascript">
 
-
+	// Navigating through sections
         function myFunction4() {
             document.getElementById("what_is_banking").style.display = 'block';
             document.getElementById("banking_glossary").style.display = 'none';
@@ -85,7 +86,7 @@
     height="191" />
     {% include 'logout_button.html' %}
 </div>
-
+<!--Provides content for all sections-->
 <div id="content">
 
     <div id="body">
