--- a/templates/ATMs.html
+++ b/templates/ATMs.html
@@ -4,17 +4,16 @@
 {% load staticfiles %}
 <!--Author: Michal-->
 
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href={% static 'footer.css' %}/>
 
-	<link rel="stylesheet" type="text/css" href={% static 'atms/ATMs-CSS.css' %} />
+    <link rel="stylesheet" type="text/css" href={% static 'atms/ATMs-CSS.css' %} />
     <style>
 		body {background-image: url('{% static "general\background_kids.jpg" %}') ;}
 		#nav_bar {background-image: url('{% static "general\lloyds_group_logo.png" %}') ;}
 	</style>
 	<title>ATMs</title>
-    <script
+    <script>
 	src="http://maps.googleapis.com/maps/api/js">
 	</script>
 <!--Initialises points on map-->
