--- a/templates/ATMs.html
+++ b/templates/ATMs.html
@@ -13,7 +13,7 @@
 		#nav_bar {background-image: url('{% static "general\lloyds_group_logo.png" %}') ;}
 	</style>
 	<title>ATMs</title>
-    <script>
+    <script
 	src="http://maps.googleapis.com/maps/api/js">
 	</script>
 <!--Initialises points on map-->
