--- a/static/parent_account.css
+++ b/static/parent_account.css
@@ -323,17 +323,27 @@ form#set_goals p {
 
 #choose_atms form{
     width: 800px;
-    height: 300px;
+    height: 100px;
     font-size: 25px;
-    background-color: #FFFFFF;
 }
 
-#choose_atms .entry{
-    width: 500px;
+.entry{
     background-color: #FFFFFF;
+    width: 400px;
 }
 
-#choose_atms .atms_names{
+.one_entry{
+    position: relative;
+    top: -50px;
+}
+
+.entry p{ 
+    padding-top: 25px;
+    width: 100px;
+    height: 25px;
+}
+
+.atms_names{
     position: relative;
     top: 0px;
     left: 300px;
@@ -345,8 +355,8 @@ form#set_goals p {
 
 .inside_atms{
     position: relative;
-    top: 90px;
-    left: -100px;
+    top: 10px;
+    left: -150px;
 }
 
 #choose_atms p {
@@ -367,8 +377,8 @@ form#set_goals p {
 
 #choose_atms .input input{
     position: relative;
-    top: -200px;
-    left: 700px;
+    top: -50px;
+    left: 650px;
     font-size: 100%;
     color: #FFFFFF;
     background-color: #0B8C52;
@@ -385,10 +395,22 @@ input.select_atms {
     top: 60px;
 }
 
+.bar{
+    height: 3px;
+    width: 905px;
+    background-color: #0B8C52;
+}
+
 #add_atm{
     position: relative;
-    top: -250px;
-    left: 950px;
+    top: -270px;
+    left: 1050px;
+}
+
+#add_atm label{
+    position: relative;
+    top: 20px;
+    font-size: 25px;
 }
 
 #add_atm select{
@@ -399,17 +421,23 @@ input.select_atms {
     width: 100px;
 }
 
+.name_atm{
+    position: relative;
+    top: 20px;
+    left: 2px;
+}
+
 .name_atm input{
     position: relative;
-    top: 50px;
-    left: 25px;
+    top: 55px;
+    left: -290px;
     height: 35px;
 }
 
 .add_button input{
     position: relative;
-    top: 85px;
-    left: 140px;
+    top: 100px;
+    left: 0px;
     font-size: 150%;
     color: #FFFFFF;
     background-color: #0B8C52;
