--- a/templates/parent_account.html
+++ b/templates/parent_account.html
@@ -125,7 +125,7 @@
                 {% endfor %}
             </div>
             </div>
- 
+        <div class="bar"></div>
 
         {% endfor %}
         </div>
